IASC-320 Fix some spacing between the main <header> and titles + adding some top padding to login cta
Former-commit-id: 7e746b27c6f3001734005ee3e0c316d13412ab6d

--- a/src/themes/iasc/assets/sass/layout/_layout.scss
+++ b/src/themes/iasc/assets/sass/layout/_layout.scss
@@ -4,6 +4,10 @@
  * Styles for main layout
  */
 
+header.header {
+  margin-bottom: 20px;
+}
+
 .container {
   @media screen and (max-width: $screen-xs-min) {
     padding-right: 10px;
